# football_sandbox

./: .pre-commit-config.yaml  README.md  pyproject.toml
Notebooks/: Cleaning data from football data.ipynb  Fetching data from fbref.ipynb  Notebook to evaluate performance of scikit learn models.ipynb
Notebooks/Fetch and Persisting/: Notebook used to demo persisting basic tables for fbref football schema.ipynb
Notebooks/Player_analysis/: Player analysis with percentile.ipynb
SQL/: fbref_schema.sql
src/fbref/: fbref_class.py
src/fbref/analysis/: functions.py
src/fbref/cli/: persist_fbref_data.py
src/fbref/config/: fbref_config.py
src/fbref/etl/: clean.py  fetch.py
src/fbref/etl/db/: clean.py  fetch.py
src/football_data/config/: football_data_config.py
src/football_data/etl/: clean.py  fetch.py
src/utility/: functions.py
src/utility/maths/: hypothesis_testing.py
src/utility/sql/: fetch_and_persist.py
