[tool.poetry]
name = "football-sandbox"
version = "0.1.0"
description = ""
authors = ["James Lai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.8"
pandas = "^1.5.1"
matplotlib = "^3.6.2"
pylint = "^2.15.6"
flake8 = "^5.0.4"
pytest = "^7.2.0"
mypy = "^0.991"
jupyter-black = "^0.3.1"
ipykernel = "^6.17.1"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
types-requests = "^2.28.11.5"
seaborn = "^0.12.1"
sqlalchemy = "^2.0.0"
psycopg2 = "^2.9.5"
typer = "^0.7.0"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
black = "22.3.0"
jupyter = "*"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
